fixed orange hamburger spacing

--- a/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
+++ b/react-app/src/components/ProjectPage/UpdatesSection/Update/Update.css
@@ -13,6 +13,24 @@
   background-color: #FFF;
 }
 
+.update-counter-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+
+.update-counter {
+
+}
+
+.update-header {
+  margin-bottom: 18px;
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: bold;
+  color: #282828;
+}
+
 .grid-container {
   margin: 0 auto;
   padding: 0 60px;
@@ -24,7 +42,7 @@
 }
 
 .update-spacer {
-  padding: 0 -18px;
+  padding: 0 18px;
   position: relative;
   float: left;
   margin-bottom: 36px;
@@ -42,6 +60,7 @@
 }
 
 .hamburger-icon {
+  position: relative;
   height: 48px;
   width: 48px;
   fill: #F97B62;
